Alterações na versão final
mudanças visuais na paleta de cores da versão final do projeto.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
         margin: 0;
       }
     </style>
-    <title>Vou De Booking</title>
+    <title>Travel and Go</title>
   </head>
   <body>
     <noscript>Você precisa ativar o JavaScript para executar este aplicativo.</noscript>
